# GTFS-GO

./: .coveragerc  .gitignore  .gitmodules  README.html  README.md  README.txt  __init__.py  aggregated_routes.qml  aggregated_stops.qml  constants.py  datalist.py  frequency.qml  frequency_stops.qml  gtfs_go.pro  gtfs_go.py  gtfs_go_datalist.json  gtfs_go_dialog.py  gtfs_go_dialog_base.ui  gtfs_go_labeling.py  gtfs_go_loader.py  gtfs_go_loader_base.ui  gtfs_go_renderer.py  gtfs_go_settings.py  gtfs_viewer.py  gtfs_viewer_constants.py  gtfs_viewer_datalist.json  gtfs_viewer_datalist.py  gtfs_viewer_dialog.py  gtfs_viewer_dialog_base.ui  gtfs_viewer_dockwidget.py  gtfs_viewer_dockwidget_base.ui  gtfs_viewer_labeling.py  gtfs_viewer_loader.py  gtfs_viewer_loader_base.ui  gtfs_viewer_renderer.py  gtfs_viewer_settings.py  japan_dpf_api.py  japan_dpf_table.py  japan_dpf_table_model.py  metadata.txt  (+3 more)
.github/workflows/: lint.yml  release.yml  test.yml  test_gtfs_parser.yml
gtfs_jp_parser/: __init__.py  __main__.py
gtfs_parser/: LICENSE  README.md  __init__.py  __main__.py  aggregate.py  constants.py  gtfs.py  parse.py
gtfs_parser/tests/: test_gtfs_parser.py
gtfs_parser/tests/fixture/: agency.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_rules.txt  feed_info.txt  office_jp.txt  routes.txt  shapes.txt  stops.txt  translations.txt  trips.txt
i18n/: GTFSGO_fr.qm  GTFSGO_fr.ts  GTFSGO_ja.qm  GTFSGO_ja.ts
parser/: __init__.py  constants.py
repository/: __init__.py
repository/japan_dpf/: __init__.py  api.py  table.py
tests/: conftest.py  qgis_interface.py  test_dialog.py  test_gtfs_go.py  test_gtfs_go_dialog.py  test_gtfs_go_labelling.py  test_gtfs_go_renderer.py  test_metadata.py  test_qgis_environment.py  test_repository_api.py  utilities.py
