[project]
name = "gtfs-go"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Kanahiro", email = "mediterranean1769@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
]

[dependency-groups]
dev = [
    "pyqt5-stubs>=5.15.6.0",
    "ruff>=0.8.2",
]

[tool.ruff]
lint.select = ["F", "E", "W", "B", "C90", "N", "I"]
lint.ignore = ["N999", "N802", "F401", "E501", "N806", "C901", "N803", "N815", "B018"]
target-version = "py39"